<resources>
    <string name="app_name">学院在线</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="guide_start">立即体验</string>

    <string name="menu_first">首页</string>
    <string name="menu_second">课程</string>
    <string name="menu_third">下载</string>
    <string name="menu_forth">我的</string>
    <string name="please_input">请输入</string>
    <string name="search">搜索</string>

    <string name="login">登录</string>
    <string name="login_student">学生登录</string>
    <string name="login_teacher">教师登录</string>
    <string name="login_root">管理员登录</string>
    <string name="chaptername">章节</string>
    <string name="detailname">详情</string>
    <string name="commentname">评论</string>

    <string name="search_hint">请输入要搜索的课程名</string>

</resources>
