<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.aaron.studylive.view.NoScrollViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RadioGroup
        android:id="@+id/rg_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_bg_selector"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <RadioButton
            style="@style/TabButton"
            android:id="@+id/rb_sy"
            android:checked="true"
            android:text="@string/menu_first"
            android:drawableTop="@drawable/tab_first_selector"
            />
        <RadioButton
            android:id="@+id/rb_dic"
            style="@style/TabButton"
            android:text="@string/menu_second"
            android:drawableTop="@drawable/tab_second_selector"
            />
        <RadioButton
            android:id="@+id/rb_kc"
            style="@style/TabButton"
            android:text="@string/menu_third"
            android:drawableTop="@drawable/tab_third_selector"
            />
        <RadioButton
            android:id="@+id/rb_wd"
            style="@style/TabButton"
            android:text="@string/menu_forth"
            android:drawableTop="@drawable/tab_forth_selector"
            />

    </RadioGroup>

</LinearLayout>