<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.FlyMainActivity">

    <com.aaron.studylive.views.NoScrollViewPager
        android:id="@+id/vp_fly_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:elevation="3dp"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/tab_fly_home">
            <TextView
                android:id="@+id/tv_fly_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="2dp"
                android:drawablePadding="3dp"
                android:singleLine="true"
                android:text="@string/menu_first"
                android:drawableTop="@drawable/home641296db"
                android:textSize="12sp"
                android:textColor="@color/tab_text_selected"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="3dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/tab_fly_class">
            <TextView
                android:id="@+id/tv_fly_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:gravity="center"
                android:layout_margin="2dp"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/discuss648a8a8a"
                android:text="@string/menu_second"
                android:textSize="12sp"
                android:textColor="@color/tab_text_normal"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="3dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/tab_fly_download">
            <TextView
                android:id="@+id/tv_fly_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:gravity="center"
                android:layout_margin="2dp"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/course648a8a8a"
                android:text="@string/menu_third"
                android:textSize="12sp"
                android:textColor="@color/tab_text_normal"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="3dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/tab_fly_mine"
            >
            <TextView
                android:id="@+id/tv_fly_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:gravity="center"
                android:layout_margin="2dp"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/mine648a8a8a"
                android:text="@string/menu_forth"
                android:textSize="12sp"
                android:textColor="@color/tab_text_normal"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="3dp"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>