<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_detail_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/post_detail_nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="200dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:elevation="3dp"
                android:background="@android:color/white"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/tab_cp">
                    <TextView
                        android:id="@+id/tv_cp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:text="@string/chaptername"
                        android:textColor="@color/tab_text_selected"
                        android:layout_centerInParent="true"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/tab_intro">
                    <TextView
                        android:id="@+id/tv_intro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:text="@string/detailname"
                        android:textColor="@color/tab_text_normal"
                        android:layout_centerInParent="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="3dp"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/tab_comment">
                    <TextView
                        android:id="@+id/tv_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:gravity="center"
                        android:layout_margin="2dp"
                        android:drawablePadding="3dp"
                        android:text="@string/commentname"
                        android:textSize="20sp"
                        android:textColor="@color/tab_text_normal"
                        android:layout_centerInParent="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="3dp"/>
                </RelativeLayout>
            </LinearLayout>

            <com.aaron.studylive.views.NoScrollViewPager
                android:id="@+id/vp_cp_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

<!--    <com.aaron.studylive.video.LandLayoutVideo-->
<!--        android:id="@+id/detail_player"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="200dp" />-->

    <com.aaron.studylive.video.LandLayoutVideo
        android:id="@+id/detail_player"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

</RelativeLayout>

